--- a/project/index.html
+++ b/project/index.html
@@ -13,6 +13,6 @@
   </head>
 
   <body>
-    <script src="sketch_project.js"></script>
+    <script src="simulation.js"></script>
   </body>
 </html>
