Add evolution skeleton

--- a/project/index.html
+++ b/project/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Sketch</title>
+    <title>Fish swarm visualization</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- <script src="output.json" type="text/json"></script> -->
@@ -13,7 +13,6 @@
   </head>
 
   <body>
-    <!-- <script src="simulation.js"></script> -->
     <script src="visualize.js"></script>
   </body>
 </html>
